--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "react": "^17.0.1",
     "react-date-picker": "^8.0.7",
     "react-dom": "^17.0.1",
+    "react-modal": "^3.14.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-transition-group": "^4.4.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
